...
                            ? const SizedBox(
                              height: 20,
                              width:20,
                              child: CircularProgressIndicator(strokeWidth: 3,
                                    color: Colors.indigo),
                              )
                            : const Text('Log In', style: TextStyle(fontSize:16)),
                    ),
                    const SizedBox(height: 16),
                  ],
                ),
              ),
            ), 
...
